--- a/app/src/main/res/layout/inventory_list.xml
+++ b/app/src/main/res/layout/inventory_list.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -12,13 +14,6 @@
         android:textAllCaps="true"
         android:textStyle="bold"
         android:gravity="center"/>
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
-    </ListView>
-
     <TextView
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
@@ -34,5 +29,10 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="6dp"
         android:text="@string/addProductButton"/>
-
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp">
+    </ListView>
 </LinearLayout>
